[gd_scene load_steps=8 format=4 uid="uid://bdhkvvfelm5t2"]

[ext_resource type="Script" uid="uid://qaa7k0na07p5" path="res://scenes/menu/settings.gd" id="1_occy7"]
[ext_resource type="TileSet" uid="uid://vk3mo16g3chg" path="res://img/world_tile_set.tres" id="2_ck4fc"]
[ext_resource type="Texture2D" uid="uid://dxvcbo0dgkib5" path="res://img/logo_white_transparent.png" id="3_mst10"]
[ext_resource type="Theme" uid="uid://cti38vxpjm685" path="res://scenes/menu/main_menu_font.tres" id="4_jmn0l"]
[ext_resource type="FontFile" uid="uid://mhmhy4xnwhwe" path="res://fonts/liberation-fonts-ttf-2.1.5/LiberationSerif-Bold.ttf" id="5_6biaa"]
[ext_resource type="AudioStream" uid="uid://lghlgiu5yxi6" path="res://resources/Fireball Impact.wav" id="6_v208e"]

[sub_resource type="LabelSettings" id="LabelSettings_mvcuf"]
font = ExtResource("5_6biaa")
font_size = 72
font_color = Color(1, 0.686275, 0, 1)

[node name="Settings" type="Node2D"]
script = ExtResource("1_occy7")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAACAAEAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAADAAIAAgAAAAAAAAABAAEAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAHAAMAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAJAAQAAgAAAAAAAAAKAAQAAgAAAAAAAAALAAMAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAEAAgAAAAAAAAALAAEAAgAAAAAAAAAKAAEAAgAAAAAAAAAJAAEAAgAAAAAAAAAIAAEAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAKAAMAAgAAAAAAAAALAAIAAgAAAAAAAAAKAAIAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAOAAAAAgAAAAAAAAANAAAAAgAAAAAAAAAMAAAAAgAAAAAAAAALAAAAAgAAAAAAAAAKAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAANAAkAAgAAAAAAAAAMAAkAAgAAAAAAAAALAAkAAgAAAAAAAAAKAAkAAgAAAAAAAAAJAAkAAgAAAAAAAAAIAAkAAgAAAAAAAAAHAAkAAgAAAAAAAAAGAAkAAgAAAAAAAAAFAAkAAgAAAAAAAAAEAAkAAgAAAAAAAAADAAkAAgAAAAAAAAACAAkAAgAAAAAAAAABAAkAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAABAAcAAgAAAAAAAAACAAcAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAADAAgAAgAAAAAAAAACAAgAAgAAAAAAAAABAAgAAgAAAAAAAAABAAYAAgAAAAAAAAABAAUAAgAAAAAAAAABAAQAAgAAAAAAAAABAAMAAgAAAAAAAAACAAYAAgAAAAAAAAADAAUAAgAAAAAAAAADAAQAAgAAAAAAAAADAAMAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAADAAYAAgAAAAAAAAAFAAYAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAQAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAYAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAUAAgAAAAAAAAAIAAUAAgAAAAAAAAAGAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAJAAcAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAALAAgAAgAAAAAAAAALAAcAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAANAAgAAgAAAAAAAAANAAcAAgAAAAAAAAAMAAYAAgAAAAAAAAALAAYAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAANAAYAAgAAAAAAAAAMAAUAAgAAAAAAAAALAAUAAgAAAAAAAAANAAUAAgAAAAAAAAANAAQAAgAAAAAAAAAMAAQAAgAAAAAAAAALAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAANAAMAAgAAAAAAAAANAAIAAgAAAAAAAAANAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAGAAEAAgAAAAAAAAA=")
tile_set = ExtResource("2_ck4fc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mst10")
expand_mode = 4
stretch_mode = 5

[node name="Settings" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -173.5
offset_bottom = 173.5
grow_horizontal = 2
grow_vertical = 2

[node name="UIScale" type="HBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Settings/UIScale"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "SETTINGS_UI_SCALE"

[node name="UIScaleOption" type="OptionButton" parent="CanvasLayer/Settings/UIScale"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
selected = 0
item_count = 3
popup/item_0/text = "x1"
popup/item_0/id = 0
popup/item_1/text = "x1.5"
popup/item_1/id = 1
popup/item_2/text = "x2"
popup/item_2/id = 2

[node name="Particles" type="HBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Settings/Particles"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "SETTINGS_PARTICLES"

[node name="ParticlesOption" type="CheckButton" parent="CanvasLayer/Settings/Particles"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
button_pressed = true

[node name="Light" type="HBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Settings/Light"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "SETTINGS_LIGHT"

[node name="LightOption" type="CheckButton" parent="CanvasLayer/Settings/Light"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
button_pressed = true

[node name="Volume" type="HBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Settings/Volume"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "SETTINGS_VOLUME"

[node name="VolumeOption" type="HSlider" parent="CanvasLayer/Settings/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("4_jmn0l")
value = 50.0

[node name="Value" type="Label" parent="CanvasLayer/Settings/Volume"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "50"

[node name="ReturnButton" type="Button" parent="CanvasLayer/Settings"]
layout_mode = 2
theme = ExtResource("4_jmn0l")
text = "RETURN"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_mvcuf")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_v208e")

[connection signal="item_selected" from="CanvasLayer/Settings/UIScale/UIScaleOption" to="." method="_on_ui_scale_option_item_selected"]
[connection signal="toggled" from="CanvasLayer/Settings/Particles/ParticlesOption" to="." method="_on_particles_option_toggled"]
[connection signal="toggled" from="CanvasLayer/Settings/Light/LightOption" to="." method="_on_light_option_toggled"]
[connection signal="value_changed" from="CanvasLayer/Settings/Volume/VolumeOption" to="." method="_on_volume_option_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings/ReturnButton" to="." method="_on_return_button_pressed"]
